# MarkConvert

./: .gitignore  ANLEITUNG.txt  LICENSE  Produktbeschreibung  README.md  markdown-editor.html  pyproject.toml
examples/: README.md  vlm_example.py
src/markconvert/: __init__.py  __main__.py  app.py  converter.py  ollama_client.py  openai_vision_client.py  pdf_to_image.py
src/markconvert/templates/: index.html
